# transcriber

./: .gitignore  DEPLOY.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
infra/: README.md  cors.json
tests/: package.json  playwright.config.ts
tests/e2e/: smoke.spec.ts  upload-flow.spec.ts
tests/fixtures/: accent.musicxml  drone.musicxml  scale.musicxml  twinkle.musicxml
web/: .prettierignore  eslint.config.js  package.json  svelte.config.js  vite.config.ts  wrangler.toml
web/scripts/: build-icons.mjs
web/src/: app.css  app.d.ts  app.html
web/src/lib/client/: duration.ts  qr.ts  upload.ts
web/src/lib/components/: DropStaff.svelte  Metronome.svelte  QuarterNote.svelte  Staff.svelte
web/src/lib/server/: env.ts  id.ts  jobs.ts  r2-storage.ts  remote-worker.ts  services.ts  storage.ts  worker.ts
web/src/lib/shared/: config.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/api/jobs/: +server.ts
web/src/routes/api/jobs/[id]/: +server.ts
web/src/routes/api/jobs/[id]/events/: +server.ts
web/src/routes/api/storage/[...path]/: +server.ts
web/src/routes/jobs/[id]/: +page.server.ts  +page.svelte
web/src/routes/share/[id]/: +page.server.ts  +page.svelte
web/static/: site.webmanifest
worker/: README.md  app.py  pyproject.toml
worker/scripts/: build_fixtures.py
worker/tests/: test_pipeline.py  test_smoke.py
worker/transcriber/: __init__.py  __main__.py  apparatus.py  audio.py  classify.py  compose.py  monophonic.py  notation.py  pipeline.py  rendering.py  transcription.py
